--- a/ur_pick_and_place/CMakeLists.txt
+++ b/ur_pick_and_place/CMakeLists.txt
@@ -48,3 +48,5 @@ catkin_package(
 
 include_directories(${THIS_PACKAGE_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIRS})
 
+catkin_install_python(PROGRAMS scripts/move_group_python_interface_tutorial_gripper_template.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
